[gd_scene load_steps=12 format=3 uid="uid://dof5pa3myt7la"]

[ext_resource type="Script" path="res://scripts/login.gd" id="1_da2p2"]
[ext_resource type="FontFile" uid="uid://b4pkdf5nfix06" path="res://shared/fonts/Exo2-Regular.ttf" id="2_gjsc2"]
[ext_resource type="Theme" uid="uid://bt21n7e5vhsxq" path="res://shared/themes/auth_theme.tres" id="3_g03hs"]
[ext_resource type="Script" path="res://scripts/base_button.gd" id="4_35gp3"]
[ext_resource type="Theme" uid="uid://bu11rtwbbe1g0" path="res://shared/themes/auth_link.tres" id="5_f15ht"]
[ext_resource type="Theme" uid="uid://bbcgiygilksxf" path="res://shared/themes/password_visible_button.tres" id="6_ok4uh"]
[ext_resource type="FontFile" uid="uid://bkyagj15rlibl" path="res://shared/fonts/noto-emoji.ttf" id="7_d47c7"]
[ext_resource type="Texture2D" uid="uid://de3jpqctuaymx" path="res://assets/images/not_visible.png" id="8_2jysl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eoxdc"]
bg_color = Color(0.270588, 0.482353, 0.768627, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kgduc"]
bg_color = Color(1, 0.2, 0.309804, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wpw2k"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 60
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_radius_bottom_left = 60

[node name="Login" type="Node2D"]
script = ExtResource("1_da2p2")

[node name="BackgroundPanel" type="Panel" parent="."]
z_index = -10
offset_right = 1280.0
offset_bottom = 728.0
theme_override_styles/panel = SubResource("StyleBoxFlat_eoxdc")

[node name="TitleLabel" type="Label" parent="."]
offset_top = 48.0
offset_right = 1280.0
offset_bottom = 121.0
theme_override_colors/font_color = Color(0.945098, 0.980392, 0.933333, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("2_gjsc2")
theme_override_font_sizes/font_size = 60
text = "UNTITLED AUTO BATTLER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InputControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 720.0
offset_top = 288.0
offset_right = 760.0
offset_bottom = 328.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_g03hs")

[node name="LoginBoxPanel" type="Panel" parent="InputControl"]
layout_mode = 0
offset_left = -272.0
offset_top = -88.0
offset_right = 112.0
offset_bottom = 212.0
theme_override_styles/panel = SubResource("StyleBoxFlat_kgduc")

[node name="Panel" type="Panel" parent="InputControl/LoginBoxPanel"]
layout_mode = 0
offset_left = 64.0
offset_top = -56.0
offset_right = 128.0
offset_bottom = 56.0
theme_override_styles/panel = SubResource("StyleBoxFlat_wpw2k")

[node name="Panel2" type="Panel" parent="InputControl/LoginBoxPanel"]
layout_mode = 0
offset_left = 256.0
offset_top = -56.0
offset_right = 320.0
offset_bottom = 56.0
theme_override_styles/panel = SubResource("StyleBoxFlat_wpw2k")

[node name="LoginButton" type="Button" parent="InputControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -276.0
offset_top = 108.0
offset_right = 76.0
offset_bottom = 172.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("2_gjsc2")
theme_override_font_sizes/font_size = 40
text = "LOG IN"
script = ExtResource("4_35gp3")

[node name="EmailLabel" type="Label" parent="InputControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -276.0
offset_top = -76.0
offset_right = -201.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 2
text = "Email"

[node name="EmailInput" type="LineEdit" parent="InputControl"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -276.0
offset_top = -44.0
offset_right = 76.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Enter email"

[node name="PasswordLabel" type="Label" parent="InputControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -276.0
offset_top = 12.0
offset_right = -182.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
text = "Password"

[node name="PasswordInput" type="LineEdit" parent="InputControl"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -276.0
offset_top = 44.0
offset_right = 20.0
offset_bottom = 93.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Enter password"
secret = true

[node name="NoAccountLabel" type="Label" parent="."]
offset_left = 464.0
offset_top = 520.0
offset_right = 689.0
offset_bottom = 548.0
theme_override_font_sizes/font_size = 20
text = "Don't have an account?"

[node name="ErrorLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
offset_left = 832.0
offset_top = 208.0
offset_right = 1280.0
offset_bottom = 496.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "ERROR"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="TestLogin" type="Button" parent="."]
visible = false
offset_left = 904.0
offset_top = 600.0
offset_right = 1189.0
offset_bottom = 664.0
focus_mode = 0
theme = ExtResource("3_g03hs")
text = "TEST LOG IN"
script = ExtResource("4_35gp3")

[node name="PlayAsGuestButton" type="Button" parent="."]
offset_left = 464.0
offset_top = 600.0
offset_right = 816.0
offset_bottom = 664.0
focus_mode = 0
theme = ExtResource("3_g03hs")
text = "PLAY AS GUEST"
script = ExtResource("4_35gp3")

[node name="GoToRegister" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 696.0
offset_top = 520.0
offset_right = 808.0
offset_bottom = 548.0
grow_horizontal = 2
grow_vertical = 0
focus_mode = 0
theme = ExtResource("5_f15ht")
theme_override_fonts/font = ExtResource("2_gjsc2")
theme_override_font_sizes/font_size = 20
text = "Register"
script = ExtResource("4_35gp3")

[node name="GoToForgotPassword" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 560.0
offset_top = 552.0
offset_right = 715.0
offset_bottom = 580.0
grow_horizontal = 2
grow_vertical = 0
focus_mode = 0
theme = ExtResource("5_f15ht")
theme_override_fonts/font = ExtResource("2_gjsc2")
theme_override_font_sizes/font_size = 20
text = "Forgot password
"
script = ExtResource("4_35gp3")

[node name="ShowPasswordButton" type="Button" parent="."]
unique_name_in_owner = true
offset_left = 768.0
offset_top = 352.0
offset_right = 816.0
offset_bottom = 400.0
focus_mode = 0
theme = ExtResource("6_ok4uh")
theme_override_fonts/font = ExtResource("7_d47c7")
theme_override_font_sizes/font_size = 20
icon = ExtResource("8_2jysl")
icon_alignment = 1

[connection signal="pressed" from="InputControl/LoginButton" to="." method="_on_login_button_pressed"]
[connection signal="pressed" from="TestLogin" to="." method="_on_test_login_pressed"]
[connection signal="pressed" from="PlayAsGuestButton" to="." method="_on_play_as_guest_button_pressed"]
[connection signal="pressed" from="GoToRegister" to="." method="_on_go_to_register_pressed"]
[connection signal="pressed" from="GoToForgotPassword" to="." method="_on_go_to_forgot_password_pressed"]
[connection signal="pressed" from="ShowPasswordButton" to="." method="_on_show_password_button_pressed"]
